# simpleDB

./: .gitignore  DB.py  README.md  database.db  main.py  pyproject.toml  setup.cfg
simpleDB/: Table.py  db.py  encryption.py  query.py  storage.py  utils.py
tests/: test_database.py  test_encryption.py  test_queries.py  test_table.py  utils.py
tests/test_database/: test_database.py
