
[tool.poetry]
name = "simpleDB"
version = "0.1.0"
description = "A simple and lightweight SQL-like database"
authors = ["William Wigemo <41762983+wille430@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
