[metadata]
name = simpledb-wille430
version = 0.1.0
author = William Wigemo
author_email = 41762983+wille430@users.noreply.github.com
description = A simple and lightweight SQL-like database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wille430/simpleDB
project_urls =
    Bug Tracker = https://github.com/wille430/simpleDB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10